support ignoring existing files