@@ -2,11 +2,15 @@ package org.example.service.impl;
 
 import freemarker.template.Configuration;
 import freemarker.template.Template;
+import freemarker.template.TemplateException;
 import freemarker.template.TemplateExceptionHandler;
 import java.io.File;
+import java.io.IOException;
 import java.io.Writer;
+import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -32,8 +36,14 @@ public class FtlTemplateService implements TemplateService {
 				Map<String, Object> config = new HashMap<>();
 				config.put("packageName", AbstractGeneratorContext.packageName);
 				config.put("entity", entity);
-				try (Writer fileWriter = Files.newBufferedWriter(Path.of(outputDirectory.getPath(), String.format("%s.java", entity.getName())))) {
+
+				Path outputPath = Path.of(outputDirectory.getPath(), "%s.java".formatted(entity.getName()));
+				try (Writer fileWriter = Files.newBufferedWriter(outputPath, StandardOpenOption.CREATE_NEW)) {
 					template.process(config, fileWriter);
+				} catch (FileAlreadyExistsException e) {
+					AbstractGeneratorContext.log.info(String.format("\tIgnoring entity '%s'. If you wish to replace existing files, set removeOldOutput=true", entity.getName()));
+				} catch (TemplateException | IOException e) {
+					AbstractGeneratorContext.log.info(String.format("\tFailed while processing entity '%s' - %s", entity.getName(), e.getMessage()));
 				}
 			}
 		} catch (Exception e) {
